# near-checksum

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  readme.md
docs/: readme.md
src/: lib.rs  util.rs
src/contract/: main.rs
tests/integration/: add_simulate.rs  gas_simulate.rs  has_simulate.rs  main.rs  utils.rs
