[package]
name = "near-checksum"
version = "1.0.0-beta.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "checksum"
path = "src/contract/main.rs"
test = true
doctest = false
bench = false
doc = false

# [make rustup]
# rustup component add clippy
# rustup component add rustfmt
# rustup target add wasm32-unknown-unknown

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
